fix colore test bottone collapse

--- a/src/redturtle/agidtheme/theme/sass/components/_tile_collection.scss
+++ b/src/redturtle/agidtheme/theme/sass/components/_tile_collection.scss
@@ -100,39 +100,6 @@
             font-weight: $bold;
             padding: 10px 0;
         }
-
-        // .newsDescription {
-        //     overflow: hidden;
-        //     position: relative;
-        //     height: 6em;
-        // }
-        //
-        // .newsDescription:before {
-        //     content: "";
-        //     float: left;
-        //     width: 5px;
-        //     height: 6em;
-        // }
-        //
-        // .newsDescription > *:first-child {
-        //     float: right;
-        //     width: 100%;
-        //     margin-left: -5px;
-        // }
-        //
-        // .newsDescription:after {
-        //     content: "\02026";
-        //     box-sizing: content-box;
-        //     float: right;
-        //     position: relative;
-        //     top: -25px;
-        //     left: 100%;
-        //     width: 1em;
-        //     margin-left: -1em;
-        //     padding-right: 5px;
-        //     text-align: right;
-        //     background: linear-gradient(to right, rgba(255, 255, 255, 0), white 15%, white);
-        // }
     }
 
     @media (max-width: $screen-xs-max) {
@@ -158,7 +125,6 @@
             .tile-collapse-button {
                 position: relative;
                 padding-right: 30px;
-                color: inherit;
 
                 .title-content {
                     border-bottom: 1px solid #000;
@@ -197,49 +163,6 @@
                 }
             }
         }
-
-/*         &.toggle-news {
- *             .news-collection {
- *                 .tileBody {
- *                     transition: max-height $animation-speed ease-in-out;
- *                     max-height: 10000px;
- *
- *                     .showMore {
- *                         display: block;
- *                     }
- *                 }
- *
- *                 .tile-collapse-button {
- *                     .title-icon {
- *                         &:before {
- *                             @include make-fa('\f106');
- *                         }
- *                     }
- *                 }
- *             }
- *         }
- *
- *         &.closed {
- *             .news-collection {
- *                 .tileBody {
- *                     transition: max-height $animation-speed ease-in-out;
- *                     max-height: 0;
- *                     overflow: hidden;
- *
- *                     .showMore {
- *                         display: none;
- *                     }
- *                 }
- *
- *                 .tile-collapse-button {
- *                     .title-icon {
- *                         &:before {
- *                             @include make-fa('\f107');
- *                         }
- *                     }
- *                 }
- *             }
- *         } */
     }
 
     .mobile-hidden {
@@ -357,40 +280,6 @@
                     }
                 }
             }
-
-            // .news-description {
-            //     font-size: 2rem;
-            //     overflow: hidden;
-            //     position: relative;
-            //     height: 9em;
-            // }
-            //
-            // .news-description:before {
-            //     content: "";
-            //     float: left;
-            //     width: 5px;
-            //     height: 9em;
-            // }
-            //
-            // .news-description > *:first-child {
-            //     float: right;
-            //     width: 100%;
-            //     margin-left: -5px;
-            // }
-            //
-            // .news-description:after {
-            //     content: "\02026";
-            //     box-sizing: content-box;
-            //     float: right;
-            //     position: relative;
-            //     top: -25px;
-            //     left: 100%;
-            //     width: 1em;
-            //     margin-left: -1em;
-            //     padding-right: 5px;
-            //     text-align: right;
-            //     background: linear-gradient(to right, rgba(255, 255, 255, 0), white 15%, white);
-            // }
         }
 
         .item-image {
